Fix z-index?

--- a/src/css/components/blackout.css
+++ b/src/css/components/blackout.css
@@ -7,7 +7,6 @@
   width: 100%;
   height: 100%;
   opacity: 0;
-  z-index: 250;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
