--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -18,7 +18,6 @@
 }
 
 .header--desktop {
-  z-index: 202;
   width: calc(100% - (var(--vertical-header-size) * 2));
   height: var(--header-size);
   margin-right: var(--vertical-header-size);
@@ -26,7 +25,6 @@
 }
 
 .header--mobile {
-  z-index: 203;
   width: 100%;
   height: var(--header-size);
   margin-right: 0;
