--- a/src/css/components/vertical-header.css
+++ b/src/css/components/vertical-header.css
@@ -5,7 +5,6 @@
   box-sizing: border-box;
   position: fixed;
   bottom: 0;
-  z-index: 201;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -22,7 +21,6 @@
   padding-top: 0;
   animation-name: slideFromRight;
   right: calc(var(--vertical-header-size) * -1);
-  z-index: 203;
 }
 
 .vertical-header--right.active {
